// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchForm> disables operation when no service selected 1`] = `
<Field
  component={[Function]}
  name="operation"
  placeholder="Select An Operation"
  props={
    Object {
      "clearable": false,
      "disabled": true,
      "options": Array [
        Object {
          "label": "all",
          "title": "all",
          "value": "all",
        },
      ],
      "required": true,
    }
  }
/>
`;

exports[`<SearchForm> enables operation when known service selected 1`] = `
<Field
  component={[Function]}
  name="operation"
  placeholder="Select An Operation"
  props={
    Object {
      "clearable": false,
      "disabled": false,
      "options": Array [
        Object {
          "label": "all",
          "title": "all",
          "value": "all",
        },
        Object {
          "label": "A",
          "title": "A",
          "value": "A",
        },
        Object {
          "label": "B",
          "title": "B",
          "value": "B",
        },
      ],
      "required": true,
    }
  }
/>
`;

exports[`<SearchForm> enables operation when unknown service selected 1`] = `
<Field
  component={[Function]}
  name="operation"
  placeholder="Select An Operation"
  props={
    Object {
      "clearable": false,
      "disabled": false,
      "options": Array [
        Object {
          "label": "all",
          "title": "all",
          "value": "all",
        },
      ],
      "required": true,
    }
  }
/>
`;
